# bharattwin

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
data/kite_historical/: GLAXO_2006_2009.json  IDBI_2006_2009.json  IDBI_2010_2013.json  IDBI_2014_2017.json  IDBI_2018_2021.json  IDBI_2022_2026.json  JINDALSTEL_2006_2009.json  MTNL_2006_2009.json  MTNL_2010_2013.json  MTNL_2014_2017.json  MTNL_2018_2021.json  MTNL_2022_2026.json  NATIONALUM_2006_2009.json  NATIONALUM_2010_2013.json  NATIONALUM_2014_2017.json  NATIONALUM_2018_2021.json  NATIONALUM_2022_2026.json  SAIL_2006_2009.json  SAIL_2010_2013.json  SAIL_2014_2017.json  SAIL_2018_2021.json  SAIL_2022_2026.json
data/seeds/: expiry_calendar.csv  nifty50_composition_changes.csv  nifty50_constituents.csv  nse_holidays.csv  sector_mapping.csv
db/migrations/: env.py
db/migrations/versions/: 0001_initial_schema.py  0002_add_factor_map.py  0003_add_agent_decisions.py
docs/: observations_and_roadmap.md  phase1_plan.md
infra/: docker-compose.yml
scripts/: daily_predict.sh  load_kite_to_db.py
src/: api.py  autoresearch.py  backtest.py  backtest_full.py  calibration.py  dashboard.py  health.py  pipeline.py  scoring.py  social.py
src/agents/: __init__.py  base.py  formatter.py  llm_providers.py  runner.py  schemas.py
src/agents/personas/: __init__.py  corp_earnings.py  dabba_speculator.py  dealer_hedging.py  dii_mf.py  event_news.py  (+5 more)
src/eval/: __init__.py  factor_engine.py
src/factors/: engine.py
src/ingestion/: base.py
src/replay/: __init__.py  run_election_010.py  run_exitpoll_011.py  run_incontext_007.py  run_live_008.py
src/stores/: calendar_store.py  event_store.py  market_state.py  raw_lake.py
src/swarm/: __init__.py  generator.py  runner.py
src/utils/: calendar.py  nifty50_constituents.py  time_utils.py
tests/unit/: test_agents.py
(+15 files in other folders)
